# plugins

./: .gitignore  CLAUDE.md  README.ko.md  README.md  catalog-policy.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: verify.yml
plugins/apple-calendar/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
plugins/apple-calendar/.claude-plugin/: plugin.json
plugins/apple-calendar/.codex-plugin/: plugin.json
plugins/apple-calendar/runtime/: calctl.swift
plugins/apple-calendar/scripts/: check.sh  install-runtime.sh
plugins/apple-calendar/skills/apple-calendar/: SKILL.md
plugins/apple-calendar/src/: lib.rs
plugins/message-pipeline/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  REQUIREMENTS.md  TESTING.md
plugins/message-pipeline/.claude-plugin/: plugin.json
plugins/message-pipeline/.codex-plugin/: plugin.json
plugins/message-pipeline/contracts/cct/: CCT.md
plugins/message-pipeline/contracts/context/: CTX.md
plugins/message-pipeline/docs/adr/: 0001-rust-core-cli-adapters.md  0002-cct-session-format.md  0004-local-raw-archive-incremental-analysis.md
plugins/message-pipeline/scripts/: check.sh  install-runtime.sh
plugins/message-pipeline/skills/message-pipeline/: SKILL.md
plugins/message-pipeline/skills/x-imessage/: SKILL.md
plugins/message-pipeline/skills/x-kakaotalk/: SKILL.md
plugins/message-pipeline/skills/x-message-pipeline/: SKILL.md
plugins/message-pipeline/src/: archive.rs  benchmark.rs  command.rs  lib.rs  main.rs  model.rs  state.rs
plugins/message-pipeline/src/export/: mod.rs
plugins/message-pipeline/src/extract/: imessage.rs
plugins/message-pipeline/src/optimizer/: mod.rs
plugins/message-pipeline/tests/: cli.rs
plugins/sherpa/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  REQUIREMENTS.md  TESTING.md  THIRD_PARTY_NOTICES.md  runtime-versions.json
plugins/sherpa/.claude-plugin/: plugin.json
plugins/sherpa/.codex-plugin/: plugin.json
plugins/sherpa/contracts/cct/: CCT.md
plugins/sherpa/contracts/context/: CTX.md
plugins/sherpa/crates/calmeta/: Cargo.toml
plugins/sherpa/crates/calmeta/src/: lib.rs  main.rs
plugins/sherpa/crates/context-engine/: Cargo.toml
plugins/sherpa/crates/context-engine/src/: cli.rs  lib.rs  state.rs  time_range.rs
plugins/sherpa/crates/context-engine/src/export/: json.rs  tsv.rs
plugins/sherpa/crates/context-engine/src/extract/: kakao.rs  mod.rs
plugins/sherpa/crates/context-engine/src/optimizer/: structure.rs
plugins/sherpa/crates/msgpipe/: Cargo.toml
plugins/sherpa/crates/msgpipe/src/: main.rs  state.rs
plugins/sherpa/crates/msgpipe/src/export/: cct.rs
plugins/sherpa/crates/msgpipe/src/optimizer/: replacer.rs
plugins/sherpa/crates/msgpipe/tests/: cli.rs
plugins/sherpa/crates/planner-metadata/: Cargo.toml
plugins/sherpa/crates/planner-metadata/src/: cli.rs  lib.rs
plugins/sherpa/crates/sherpa/: Cargo.toml
plugins/sherpa/crates/sherpa/src/: lib.rs  main.rs  process.rs
plugins/sherpa/crates/sherpa/src/adapters/: approvals.rs  kakaotalk.rs  mod.rs  system.rs
plugins/sherpa/crates/sherpa/src/context/reply/: domain.rs  mod.rs  ports.rs  service.rs
plugins/sherpa/crates/sherpa/tests/: cli.rs  context_cli.rs
plugins/sherpa/runtime/calctl/: Info.plist
plugins/sherpa/scripts/: check.sh  doctor.sh  install-runtime.sh  kakao-reply.py
plugins/sherpa/tests/: test_kakao_reply.py
scripts/: check-all.sh  check-catalog.py  check-legacy-sync.py  check-version-sync.py
(+51 files in other folders)
