[package]
name = "calmeta"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
description = "Versioned Apple Calendar note metadata parser and validator"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.6.4", features = ["derive"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
