[package]
name = "msgpipe"
version = "0.2.1"
edition = "2024"
rust-version = "1.97.1"
description = "Read-only source sync, local raw-message archive, and incremental transcript exporter"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.104"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
clap = { version = "4.6.4", features = ["derive"] }
directories = "6.0.0"
hex = "0.4.3"
regex = "1.13.1"
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
tiktoken = "3.5.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-normalization = "0.1.25"
unicode-segmentation = "1.13.3"
url = "2.5.8"
which = "8.0.5"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
