[package]
name = "sherpa"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
description = "Context collection and personal planning through one local-first CLI"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.4", features = ["derive"] }
directories = "6.0.0"
getrandom = "0.4.3"
hex = "0.4.3"
rustix = { version = "1.1.4", features = ["process"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
which = "8.0.5"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
